[gd_scene load_steps=20 format=4 uid="uid://c6bre0njke2sy"]

[ext_resource type="PackedScene" uid="uid://c3lnqei4itfpx" path="res://Prefab/TowerDefense/Character/TowerDefensePlant.tscn" id="1"]
[ext_resource type="Script" uid="uid://cqbn62d63kk7d" path="res://Asset/Anime/Character/Plant/Cover/IceSunMine/Scene/TowerDefensePlantIceSunMine.gd" id="2"]
[ext_resource type="Script" uid="uid://c3wiwula8chdo" path="res://Resource/TowerDefense/Character/Event/General/TowerDefenseCharacterEventExplodeHurt.gd" id="3"]
[ext_resource type="Script" uid="uid://cmqmtitj4tcd8" path="res://Resource/TowerDefense/Character/Event/General/TowerDefenseCharacterEventHurt.gd" id="4"]
[ext_resource type="Script" uid="uid://d37vnt7i0gkc4" path="res://Resource/TowerDefense/Character/Event/General/TowerDefenseCharacterEventSunCreate.gd" id="5"]
[ext_resource type="Script" uid="uid://bxlwoxox5hth3" path="res://Resource/TowerDefense/Character/Event/General/TowerDefenseCharacterEventForzen.gd" id="6"]
[ext_resource type="Resource" uid="uid://bgv3156vjv0ok" path="res://Asset/Anime/Character/Plant/Cover/IceSunMine/Config/TowerDefensePlantIceSunMine.tres" id="7"]
[ext_resource type="Shader" uid="uid://bbit4jhs4p0ww" path="res://Asset/Shader/TowerDefense/ShaderTowerDefenseCharacter.gdshader" id="8"]
[ext_resource type="PackedScene" uid="uid://32qoqhurj500" path="res://Asset/Anime/Character/Plant/Cover/IceSunMine/IceSunMine.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://dir0f8lu1l3b3" path="res://Script/Component/TowerDefense/Character/AttackComponent/AttackComponent.tscn" id="10"]
[ext_resource type="Script" uid="uid://domu0k4tfig2c" path="res://addons/godot_state_charts/atomic_state.gd" id="11"]
[ext_resource type="Script" uid="uid://bnuagwct5sv5y" path="res://addons/godot_state_charts/transition.gd" id="12"]

[sub_resource type="Resource" id="Resource_e6x78"]
script = ExtResource("3")
type = "Mine"
num = 1800.0
burns = true
metadata/_custom_type_script = "uid://c3wiwula8chdo"

[sub_resource type="Resource" id="Resource_5x30h"]
script = ExtResource("4")
num = 20.0
playSplatAudio = true
damageFlags = 3
collisionFlags = 15
Flag/Damage = 3
Flag/Collision = 15
metadata/_custom_type_script = "uid://cmqmtitj4tcd8"

[sub_resource type="Resource" id="Resource_e3f5w"]
script = ExtResource("5")
num = 15.0
dieCreate = false
metadata/_custom_type_script = "uid://d37vnt7i0gkc4"

[sub_resource type="Resource" id="Resource_ja2xc"]
script = ExtResource("6")
time = 3.0
iceSpeedDownTime = 15.0
fliterShield = false
metadata/_custom_type_script = "uid://bxlwoxox5hth3"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vy3vg"]
shader = ExtResource("8")
shader_parameter/brightStrength = 0.0
shader_parameter/whiteStrength = 0.0
shader_parameter/surfaceUpPos = 0.0
shader_parameter/surfaceDownPos = 1.0
shader_parameter/surfacePos = 1.0
shader_parameter/ash = false
shader_parameter/iceSpeedDown = false
shader_parameter/cover = false
shader_parameter/hypnoses = false
shader_parameter/imitater = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xotnw"]
size = Vector2(70, 70.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_to35b"]
size = Vector2(118, 70.5)

[node name="TowerDefensePlantIceSunMine" node_paths=PackedStringArray("sprite") instance=ExtResource("1")]
script = ExtResource("2")
readyTime = 15.0
explodeEventList = [SubResource("Resource_e6x78")]
eventList = [SubResource("Resource_5x30h"), SubResource("Resource_e3f5w"), SubResource("Resource_ja2xc")]
config = ExtResource("7")
sprite = NodePath("SpriteGroup/TransformPoint/IceSunMine")
gravity = 245.0

[node name="SpriteGroup" parent="." index="1"]
material = SubResource("ShaderMaterial_vy3vg")

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(0, 30)

[node name="IceSunMine" parent="SpriteGroup/TransformPoint" index="0" instance=ExtResource("9")]
position = Vector2(0, -30)

[node name="ShadowSprite" parent="." index="3"]
visible = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 0)

[node name="AttackComponent" parent="." index="6" node_paths=PackedStringArray("checkArea") instance=ExtResource("10")]
unique_name_in_owner = true
attackType = "Smash"
checkArea = NodePath("CheckArea")

[node name="CheckArea" type="Area2D" parent="AttackComponent" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent/CheckArea" index="0"]
position = Vector2(-1, 0.75)
shape = SubResource("RectangleShape2D_xotnw")

[node name="AttackComponent2" parent="." index="7" node_paths=PackedStringArray("checkArea") instance=ExtResource("10")]
unique_name_in_owner = true
checkArea = NodePath("CheckArea")

[node name="CheckArea" type="Area2D" parent="AttackComponent2" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent2/CheckArea" index="0"]
position = Vector2(-1, 0.75)
shape = SubResource("RectangleShape2D_to35b")

[node name="CompoundState" parent="StateChart" index="0"]
initial_state = NodePath("Ready")

[node name="Ready" type="Node" parent="StateChart/CompoundState" index="1"]
script = ExtResource("11")

[node name="ToReady" type="Node" parent="StateChart/CompoundState" index="6"]
script = ExtResource("12")
to = NodePath("../Ready")
event = &"ToReady"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/CompoundState/Ready" to="." method="ReadyEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Ready" to="." method="ReadyExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Ready" to="." method="ReadyProcessing"]
